--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
   "name": "md-links",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "jest": "^24.8.0"
+  },
+  "scripts": {
+    "test": "jest --coverage"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.0"
+  }
 }
